* Fix typos in the [Bug 963] patch.
* bootstrap: squawk if genver fails.  Use -f with cp in case Dave does a chown.
* Remove obsolete simulator command-line options.
* ntp_request.c: [CID 36] zero sin_zero.
* [Bug 963] get_systime() is too noisy.
* [Bug 960] spurious syslog:crypto_setup:spurious crypto command
* [Bug 964] Change *-*-linux* to *-*-*linux* to allow for uclinux.
* Changes from Dave Mills:
  - ntp_util.c: cleanup.
  - ntp_timer.c: watch the non-burst packet rate.
  - ntp_request.c: cleanup.
  - ntp_restrict.c: RES_LIMITED cleanup.
  - ntp_proto.c: RES_LIMITED, rate bucktes, counters, overall cleanup.
  - ntp_peer.c: disallow peer_unconfig().
  - ntp_monitor.c: RES_LIMITED cleanup.
  - ntp_loopfilter.c: poll interval cleanup.
  - ntp_crypto.c: volley -> retry.  Cleanup TAI leap message.
  - ntp_config: average and minimum are ^2 values.
  - ntpdc: unknownversion is really "declined", not "bad version".
  - Packet retry cleanup.
* [Bug 961] refclock_tpro.c:tpro_poll() calls refclock_receive() twice.
* [Bug 957] Windows only: Let command line parameters from the Windows SCM GUI
  override the standard parameters from the ImagePath registry key.
* Added HAVE_INT32_T to the Windows config.h to avoid duplicate definitions.
* Work around a VPATH difference in FreeBSD's 'make' command.
* Update bugreport URL.
* Update -I documentation.
* [Bug 713] Fix bug reporting information.
* A bug in the application of the negative-sawtooth for 12 channel receivers. 
* The removal of unneeded startup code used for the original LinuxPPS, it now
  conforms to the PPSAPI and does not need special code.  
* ntp-keygen.c: Coverity fixes [CID 33,47].
* Volley cleanup from Dave Mills.
* Fuzz cleanup from Dave Mills.
* [Bug 861] Leap second cleanups from Dave Mills.
* ntpsim.c: add missing protypes and fix [CID 34], a nit.
* Upgraded bison at UDel.
* Update br-flock and flock-build machine lists.
* [Bug 752] QoS: add parse/config handling code. 