@@ -1,3 +1,4 @@
+* Dave Mills shifted some orphan processing.
 * Fix typos in the [Bug 963] patch.
 * bootstrap: squawk if genver fails.  Use -f with cp in case Dave does a chown.
 * Remove obsolete simulator command-line options.
